--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -42,9 +42,9 @@ TEX_new_aircraft_carriers:0 "New Aircraft Carriers"
 TEX_new_aircraft_carriers_desc:0 "To make sure that the American navy remains the envy of the world we must not languish and neglect new ways to make our Aircraft Carriers better in all regards. To that end let us focus on keeping our navy up to date."
 TEX_escorts:0 "Naval Escorts"
 TEX_escorts_desc:0 "Regardless of which naval plan that we choose we should make sure that our convoys are protected where ever they go. To that end let us invest in escorts for them."
-TEX_submarine_tactics:0 "Submarine Tactics"
+TEX_submarine_tactics:0 "잠수함 전술"
 TEX_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernise the American Navy we should not neglect this advantage. So to that end let us focus on the power of Submarines."
-TEX_anti_submarine_tactics:0 "Anti-Submarine Tactics"
+TEX_anti_submarine_tactics:0 "대잠수함 전술"
 TEX_anti_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernise the American Navy we should not neglect to be prepared for their usage. Let us focus on having our navy fight and destroy all submarines that the enemy may use."
 TEX_expand_annapolis:0 "Naval Station Key West"
 TEX_expand_annapolis_desc:0 "While Annapolis may have served the corrupt regime before us, we should build a new naval base in Key West Florida. Here we will have access to the Caribbean and the Atlantic Ocean to train our navy and make sure that the American navy is the envy of the world."
@@ -56,13 +56,13 @@ TEX_airforce:0 "애국적인 미국 공군"
 TEX_airforce_desc:0 "As we go to war to fight for America, we will need to build up the Air force that has patriotism in their hearts and loyalty to the Long and the true America."
 TEX_air_support:0 "레이미의 공군 지원"
 TEX_air_support_desc:0 "Howard Knox Ramey believes that the best use for the Air Force is to work with the Army. By having the army and the air force work together, victory will be ours."
-TEX_cas_effort:0 "근접항공지원Close Air Support"
+TEX_cas_effort:0 "근접 항공 지원"
 TEX_cas_effort_desc:0 "One of the key focuses for Ramey's plan is to focus on Close Air Support. We need aircraft that can focus on getting close to the enemy and providing tactical assistance to our troops."
 TEX_tatical_bombers:0 "전술폭격기들"
 TEX_tatical_bombers_desc:0 "Another key part of Ramey's plan calls for tactical bombers. By having our bombers destroy the enemy troops we will help ensure that victory is ours. So let us focus on improving our tactical bombers."
-TEX_air_supremecy:0 린드버그의 항공우세"
+TEX_air_supremecy:0 "린드버그의 항공우세"
 TEX_air_supremecy_desc:0 "Charles Lindbergh believes that the best use for the Air Force is to dominate the skies. Through ruling the skies we will have victory."
-TEX_fighters:0 "Fighter Efforts"
+TEX_fighters:0 "전투기 중점"
 TEX_fighters_desc:0 "To dominate the skies we need fighters and many of the highest qualities fighters that we can produce. To that end let us modernise the air force to make sure that our air force is the envy of the world."
 TEX_strategic_bombers:0 "전략폭격기들"
 TEX_strategic_bombers_desc:0 "To rule the skies we need to make sure that the enemy can not even take flight to begin with. To that end Lindbergh's plan calls for a focus in strategic bombers in order to achieve just that objective."
@@ -701,4 +701,3 @@ unionstate.244.t:0 "Syndicalism in Central America"
 unionstate.244.d:0 "The United Provinces have lost and now Central America is under syndicalist control. Many in the government are advocating for a crusade against Syndicalism and stop it from spreading it further in the Americas."
 unionstate.244.a:0 "We shall destroy Syndicalism"
 unionstate.244.b:0 "It won't spread"
-
