--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -573,7 +573,7 @@ worldnews.258.t:0 "리스본 함락"
 worldnews.258.d:0 "Reports from Lisbon confirm that the [old_controller.GetAdjective] city has been captured by advancing [new_controller.GetAdjective] troops after skirmishes through the Serra de Monsanto and a rapid push towards the mouth of the Tagus river. [old_controller.GetAdjective] forces put up stiff resistance, hoping to delay the [new_controller.GetAdjective] forces for as long as possible, but were eventually beaten back.\n\nThe fight for Lisbon was complicated as the [old_controller.GetAdjective] defenders intentionally destroyed Lisbon's bridges, forcing attackers to ford across the large river to fully capture the city. A ceremony was held in the Praça do Comércio where [new_controller.GetAdjective] forces called for the surrender of all remaining [old_controller.GetAdjective] soldiers in the hillsides."
 worldnews.258.a:0 "We will fight to the last!"
 worldnews.258.b:0 "Finally, Lisbon is under our control"
-비록 확인되지 않은 소식통에 따르면 중요한 연방 정부 인사들이 전투 중 철수했고 현재 행방은 알려지지 않았다고 하지만, 미군 대표들이 그 압박을 책임 지고 있는 장군과 만났다.worldnews.258.c:0 "I see..."
+worldnews.258.c:0 "I see..."
 
 worldnews.259.t:0 "시카고 함락"
 worldnews.259.d.aus:0 "연합군은 시카고에 위치한 [old_controller.GetNameDef]의 임시 수도를 향해 진격하고 있습니다. 보고에 의하면 시카고는 연합군에 의해 함락되었습니다. [old_controller.GetLeader]의 위치는 아직 알려지지 않았지만, 민병대와 함께 도시를 탈출했다고 전해지고 있습니다.\n\n보고에 따르면 헌병대가 전쟁 포로와 생디칼리스트 요인들을 체포하고있고, 도시의 고층 지구에서는 여전히 총성소리가 들리고 있다고 합니다. 이것이 미국의 생디칼리즘 실험의 끝일까요?"
