--- a/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
@@ -21,7 +21,7 @@ TUKH_REVOLT:0 "세계 혁명"
 TUKH_SCI:0 "하나된 인류"
 TUKH_PROP:0 "대륙횡단 방송"
 EXP_REV:0 "혁명 수출"
-unlock_soviet:0 "추가적인 동무들을 언락해야합니다"
+unlock_soviet:0 "더 많은 동지들"
 
 ### Opinion Modifiers ###
 SOV_UNI:0 "SOVNARKOM 설립"
@@ -160,8 +160,8 @@ sovd.4.d:0 "With government support, workers throughout the country rise up agai
 sovd.4.a:0 "좋은 소식이군!"
 sovd.5.t:0 "수도"
 sovd.5.d:0 "러시아의 역사적인 수도 둘 모두 우리의 새로운 사회주의 정부의 집이 될 수 있습니다. 어디로 가겠습니까?"
-sovd.5.a:0 "레닌그라드!"
-sovd.5.b:0 "모스크바!"
+sovd.5.a:0 "레닌그라드로!"
+sovd.5.b:0 "모스크바로!"
 sovd.6.t:0 "정교회의 지위"
 sovd.6.d:0 "Now that Soviet power has been established in Russia we must decide our stance towards the powerful Orthodox Church. The Church itself is still very important to the masses yet part of our doctrine insists that we have to destroy or significantly weaken religious organisations. What shall we do?"
 sovd.6.a:0 "러시아에서 교회를 몰아내고 국가 무신론을 도입하자!"
@@ -398,29 +398,29 @@ sovf.46.t:0 "소비에트가 트랜스아무르를 탈취하다"
 sovf.46.d:0 "Soviet Russia has managed to establish its control over the Transamur Republic. Their prime-minister has arrived in Vladivostok. Can we accept this diminishment of the Co-prosperity Sphere?"
 sovf.46.a:0 "How dare they insult Japan like this!? Attack!"
 sovf.46.b:0 "They're just reclaiming their own land..."
-sovf.47.t:0 "트렌스아무르 통합r"
+sovf.47.t:0 "트랜스아무르 통합"
 sovf.47.d:0 "The areas of the former state of Transamur are now firmly integrated into our growing socialist motherland."
 sovf.48.t:0 "한국의 운명"
-sovf.48.d:0 "The Korean people have suffered for a very long time under the Japanese regime. It is now in our power to grant them their desired independence, is this in accordance with our plans?"
-sovf.48.a:0 "Grant them independence!"
-sovf.48.b:0 "Keep it under our direct control."
-sovf.49.t:0 "Fading Sun"
-sovf.49.d:0 "We have lost control of our continental provinces. Now our homeland is directly threatened. Maybe we could appease the Soviets by offering them Korea, Port Arthur, Sakhalin and the Kuril Islands."
-sovf.49.a:0 "Offer territories for peace."
-sovf.49.b:0 "Fight on!"
+sovf.48.d:0 "한국인들은 일본의 통치 하에서 오랫동안 고통을 겪어 왔습니다. 우리는 그들이 원하는 독립을 부여해 줄 수 있는 힘이 있는데, 이것이 과연 우리의 계획에 부합할까요?"
+sovf.48.a:0 "독립을 승인하라!"
+sovf.48.b:0 "계속해서 우리 통제 하에 둔다."
+sovf.49.t:0 "태양의 쇠퇴"
+sovf.49.d:0 "우리는 우리의 대륙 지역에 대한 지배권을 잃었으며 이제 우리의 본토가 직접적으로 위협을 받는 처지입니다. 어쩌면 우리가 한반도, 포트 아서(랴오둥), 사할린과 쿠릴 열도를 할양함으로써 소련을 달랠 수도 있을 것입니다.."
+sovf.49.a:0 "평화를 위해 영토를 제안해라."
+sovf.49.b:0 "붙어보자!"
 sovf.50.t:0 "일본이 평화를 제안하다"
-sovf.50.d:0 "After we conquered their continental provinces Japan, fearing the might of our armed forces, begs for peace. They're offering us Korea, Port Arthur, Sakhalin and the Kuril Islands in exchange for the cessation of hostilities between our states."
-sovf.50.a:0 "일본을 망신시켜라!"
-sovf.50.b:0 "We shall bring freedom to Japan as well!"
+sovf.50.d:0 "우리가 일본의 대륙 영토를 정복하자, 그들은 우리 군대의 힘을 두려워하며, 우리에게 평화를 간청했습니다. 그들은 우리 나라에 한반도, 포트 아서(랴오둥), 사할린, 쿠릴 열도(러시아 열도)를 제공하는 대가로 우리 두 나라의 적대 행위를 종식시키자고 제의했습니다."
+sovf.50.a:0 "일본에게 굴욕을 주어라!"
+sovf.50.b:0 "우리는 일본에게도 자유를 전파할 것이다!"
 sovf.51.t:0 "만주의 운명"
-sovf.51.d:0 "With Japan's puppet state Fengtian finally crushed by the glorious Red Army the time has come to decide its fate. Shall we reincorporate it once more into our motherland or shall we restore its independence under our supervision? Another course of action could be the establishment of a new order, not just in Manchuria but in China as a whole!"
-sovf.51.a:0 "독립 만주국을 부활시키다!"
-sovf.51.b:0 "만주를 통합시키다!"
-sovf.51.c:0 "Create the Soviet Republic of China!"
+sovf.51.d:0 "일본의 괴뢰 정권인 봉천 정부가 영광스런 붉은 군대에 굴복하고 마침내 그 운명을 결정짓는 시기가 왔습니다. 만주를 다시 한번 조국에 편입시킬까요? 아니면 우리의 간섭 하에 독립을 허용할까요? 만주에서 뿐만 아니라 중국 전체에 새로운 질서를 확립하는 방법도 있습니다!"
+sovf.51.a:0 "독립 만주국을 부활시켜라!"
+sovf.51.b:0 "만주를 통합하라!"
+sovf.51.c:0 "중화 소비에트 공화국을 만들어내자!"
 sovf.52.t:0 "한국의 통합"
-sovf.52.d:0 "The areas of the former state of Korea are now firmly integrated into our growing socialist motherland."
+sovf.52.d:0 "옛날에 한국이 위치하던 이 지역은 지금도 계속 성장하고 있는 우리 사회주의 조국에 완전히 통합되었습니다."
 sovf.53.t:0 "만주의 통합"
-sovf.53.d:0 "The areas of the former state of Fengtian are now firmly integrated into our growing socialist motherland."
+sovf.53.d:0 "옛날에 봉천 정부가 위치하던 있었던 이 지역은 지금도 계속 성장하고 있는 우리 사회주의 조국에 완전히 통합되었습니다."
 sovf.54.t:0 "트랜스-시베리아 위기"
 sovf.54.d:0 "Horrible news! A train full of Soviet citizens has been massacred by bandits on the Mongolian section of the Trans-Siberian railway! Our people are shocked by this act of barbarism and demand an immediate response from the government. Baron von Ungern-Sternberg, Supreme Khan of All Mongols, is getting stronger. This might be the perfect opportunity to stop his wild and savage men."
 sovf.54.a:0 "We demand full sovereignty over OUR Trans-Siberian railway!"
@@ -431,10 +431,10 @@ sovf.55.d:0 "After a train carrying Soviet citizens was attacked by bandits on o
 sovf.55.a:0 "We shall abandon our portion of the railroad."
 sovf.55.b:0 "군을 동원하라, 시베리아는 우리 것이다!"
 sovf.57.t:0 "피의 남작"
-sovf.57.d:0 "폰 운게른-스텐베르그 남작은 Baron von Ungern-Sternberg has responded to our demands: one hundred ethnic Russians have been executed in Urga as a warning for us not to meddle in Mongolian affairs. He has also asserted Mongolia's historic right to Siberia. How should we react?"
-sovf.57.a:0 "받아들일 수 없다, 우린 몽골을 지도에서 제거해야한다!"
+sovf.57.d:0 "폰 운게른-스텐베르크 남작은 우리의 요구에 100명의 러시아인을 Urga에서 처형하는 것으로 응답하며 몽골의 문제에 간섭하지 말라고 경고했습니다. 그는 몽골의 역사적인 시베리아에 대한 권리도 주장해 왔습니다. 우리는 어떻게 반응해야 할까요?"
+sovf.57.a:0 "받아들일 수 없다, 우린 몽골을 지도에서 제거해야 한다!"
 sovf.56.t:0 "남작이 받아들였다!"
-sovf.56.d:0 "Wishing to avoid a conflict with our superior forces Baron von Ungern-Sternberg have agreed to our demands and returned the railroad to Soviet control"
+sovf.56.d:0 "폰 운게른-스텐베르크 남작은 우리와의 마찰을 피하기를 바라며, 우리의 요구에 동의하고 소련에게 철도 통제권을 반환했습니다."
 sovf.56.a:0 "우라!"
 sovf.58.t:0 "Sukhbaatar's revolt!"
 sovf.58.d:0 "After a train carrying Soviet citizens was attacked by bandits on our section of the Trans-Siberian railway the Soviet government used its wide array of contacts, namely general Sukhbaatar and his lackeys, to instigate rebellion against our rightful government. How will the situation evolve?"
