--- a/Kaiserreich Korean Translation/localisation/KR_Sweden_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Sweden_l_english.yml
@@ -90,31 +90,30 @@ SWE_redrule3_desc:0 "With our society in uproar and our economy staggering to su
 SWE_redrule4:0 "Revolutionary Transformation"
 SWE_redrule4_desc:0 "With massive education programs, a weak economy and a spiteful military we have no choice but to take the next great leap forward. The sooner, the better!"
 
-SWE_radicalistmilitary:0 "Radical Socialist Military"
+SWE_radicalistmilitary:0 "급진적 사회주의 군대"
 SWE_radicalistmilitary_desc:0 "In the Radical Socialist military, the men pick their own officers through a council vote. They then put faith in the executive power of their elected officer and follows them with an outstanding loyalty."
-SWE_radicalisteconomy:0 "Radical Socialist Economy"
+SWE_radicalisteconomy:0 "급진적 사회주의 경제"
 SWE_radicalisteconomy_desc:0 "The current economy is wired to primarily assure our citizen's good living standards, and it is governed from a central state with some freedom for the local communes to adjust budgets as they see fit."
-SWE_radicalistsociety:0 "Radical Socialist politics"
+SWE_radicalistsociety:0 "급진적 사회주의 사회"
 SWE_radicalistsociety_desc:0 "In our socialist society, people organise in strong unions which in turn represent them and their needs. Their chance to influence them is strong enough for people to feel like they are part of something important."
-SWE_radicalistpeople:0 "Radical Socialist People"
+SWE_radicalistpeople:0 "급진적 사회주의 "
 SWE_radicalistpeople_desc:0 "The people of our nation feel encouraged, knowing that no matter what ills befall them, the state will be there to protect them, in sickness and in health."
 
-SWE_totalistmilitary:0 "Totalist Military"
+SWE_totalistmilitary:0 "전체주의 군대"
 SWE_totalistmilitary_desc:0 "The Totalist Military would remind the onlooker very much of any traditional, imperialist army, with a strict hierarchy and a focus on offensive campaigns. At least they call their sergeants Comrade Sergeant."
-SWE_totalisteconomy:0 "Totalist Economy"
+SWE_totalisteconomy:0 "전체주의 경제"
 SWE_totalisteconomy_desc:0 "The current economy is designed to support grand projects initiated by the state, in particular in the military, and the power is more or less completely centralised to the authorities of the capital."
-SWE_totalistsociety:0 "Totalist Politics"
+SWE_totalistsociety:0 "전체주의 사회"
 SWE_totalistsociety_desc:0 "Our politics revolve around a strong leader who will guide the rest of us to greatness."
-SWE_totalistpeople:0 "Totalist People"
+SWE_totalistpeople:0 "전체주의 국민"
 SWE_totalistpeople_desc:0 "The people of our nation have been informed that there are spies and enemies around every corner, and that only their vigilant, watching eyes can safeguard the revolution."
-
-SWE_syndicalistmilitary:0 "Syndicalist Military"
+SWE_syndicalistmilitary:0 "생디칼리즘 군대"
 SWE_syndicalistmilitary_desc:0 "The Syndicalist army is primarily organised for very local, defensive tasks and lacks a common command-structure. They fight fiercly, especially in home territory, but the lack of a traditional high commander hurts the efficiency of far-stretching plans."
-SWE_syndicalisteconomy:0 "Syndicalist Economy"
+SWE_syndicalisteconomy:0 "생디칼리즘 경제"
 SWE_syndicalisteconomy_desc:0 "Our economy is very autonomous and is designed to strengthen local communes, no matter their size. With full power established locally, we put the power in the hands of the people who know their own backyard."
-SWE_syndicalistsociety:0 "Syndicalist Politics"
+SWE_syndicalistsociety:0 "생디칼리즘 사회"
 SWE_syndicalistsociety_desc:0 "Our politics are primarily focused on the commune and it lacks a strong, central authority."
-SWE_syndicalistpeople:0 "Syndicalist People"
+SWE_syndicalistpeople:0 "생디칼리즘 국민"
 SWE_syndicalistpeople_desc:0 "The people of our nation don't really feel like people of a single nation, but rather as people of a commune where everyone will look after each other."
 
 SWE_folkhemmet1:0 "Per Albins Folkhem"
@@ -124,21 +123,21 @@ SWE_folkhemmet2_desc:0 "The People's home is the brainchild of Per Albin Hansson
 SWE_folkhemmet3:0 "Per Albins Folkhem"
 SWE_folkhemmet3_desc:0 "The People's home is the brainchild of Per Albin Hansson and, in it's current stage, assures that everyone in Sweden, young and old, man and woman, rich and poor, have a chance to live a happy life with a strong security net to protect you in sickness and unemployment. The popular ideas drains strength from more radical elements of the left."
 
-SWE_freetradeidea:0 "Free Trade"
+SWE_freetradeidea:0 "자유 무역" 
 SWE_freetradeidea_desc:0 "With a strong, free trade we are building better relations with our partners and benefit our nation as a whole."
-SWE_freertradeidea:0 "Free Trade"
+SWE_freertradeidea:0 "자유 무역"
 SWE_freertradeidea_desc:0 "With a strong, free trade we are building better relations with our partners and benefit our nation as a whole."
-SWE_agrarianreform:0 "Agrarian reform"
+SWE_agrarianreform:0 "농지 개혁"
 SWE_agrarianreform_desc:0 "With our countryside now dominated by well paid professionals using modern tools we have been able to secure more people for other important work-places. Additionally, the people still working there are much better off than they used to be."
 
-SWE_germ_swe_trade:0 "German-Swedish Steel Treaty"
+SWE_germ_swe_trade:0 "독일-스웨덴 철강 조약"
 SWE_germ_swe_trade_desc:0 "The German-Swedish Steel Treaty assures that Sweden and Germany will remain trading partners for a long time to come. More importantly, German experts was sent to Sweden to help us improve our mining industry, and they are more efficient than they have ever been!"
 SWE_nordic_bloctrade:0 "The Nordic Bloc"
 SWE_nordic_bloctrade_desc:0 "The Nordic Bloc is now considered a single, inner market, without toll limitations and with easy access in between the participating nations. This reform has been rewarding economically, but even more in terms of popularity. Finally, the Fraternal people's are truly on brotherly terms!"
 
-SWE_reformed_statare:0 "Reformed Statare"
+SWE_reformed_statare:0 "고용농(Statare) 개혁"
 SWE_reformed_statarere_desc:0 "With a major overhaul work done with the Statar-situation on the countryside we can finally reap the benefits from our hard labour. Statarna now get paid both in kind and in wages and they are guaranteed the right to decent homes near their work-place and representatives in local administrations."
-SWE_corporate_statare:0 "Corporate Statare"
+SWE_corporate_statare:0 "고용농(Statare) 법인"
 SWE_corporate_statare_desc:0 "We have optimised the system with our Statare, making sure they aren't eligible only to farms and countryside companies but also to the state. A strengthened police force keeps dissent at bay as there is still discontent due to lack of proper pay and housing."
 
 SWE_redscare_idea:0 "Swedish Red Scare"
