--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -182,7 +182,7 @@ OTT_eliminate_military_factions:0 "군 파벌 처치"
 OTT_eliminate_military_factions_desc:0 "우리 군 내에는 술탄 이외에 충성심을 갖고 있는 파벌들이 있다. 이러한 이념적, 민족주의적, 그리고 심지어 종교적인 파벌들에 충성하는 종교적 파벌들은 만약 무언가가 이루어지지 않는다면 우리 군대의 죽음이 될 것이다."
 OTT_end_paramilitary:0 "오스만 국가 재건사업"
 OTT_end_paramilitary_desc:0 "우리의 오래 된 기관들, 이을디즈 조직, 그리고 CUP의 특별 조직들은 외국 정보 수집보다는 서로를 헐뜯는 것에 더 관심이 있는 부패한 준군사 조직으로 전락했다. 이것은 반드시 고쳐야 한다."
-OTT_mecidian_reforms:0 "메씨디안 개혁"
+OTT_mecidian_reforms:0 "메지디안 개혁"
 OTT_mecidian_reforms_desc:0 "그의 아버지의 행적에 뒤이어, 술탄 Abdülmecid 2세는 그의 제국의 개혁을 위한 기틀을 마련하기 시작했다. 그것이 성공할지 여부는 또 다른 의문이다."
 OTT_legal_reform:0 "법률 개혁"
 OTT_legal_reform_desc:0 "우리의 법률적인 코드 민법은 항상 개선의 과정에 있다. 우리는 정의가 항상 신속하고 결단력 있게 이루어지도록 하기 위해 이 개혁 영역에 대한 추가적인 노력을 집중할 수 있다."
