--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -1303,83 +1303,83 @@ canada.312.t:0 "미국인들은 우리의 조약을 거절했다"
 canada.312.d:0 "미국은 우리의 조약을 거부하고 협상국에 참여하지 않기로 결정했습니다."
 canada.312.a:0 "젠장할 양키놈들!"
 
-canada.320.t:0 "1936년 스탠리컵"
+canada.320.t:0 "1936년 스탠리컵(북미아이스하키리그)"
 canada.320.d:0 "두 팀이 스탠리 컵 결승전에 진출했습니다. 디트로이트 레드 윙즈와 토론토 메이플 리프스. 이 게임의 우승자는 1936년 NHL의 챔피언이 될 것이고 스탠리 컵을 받을 것입니다."
 canada.320.a:0 "누가 우승 컵을 탈까?"
 
-canada.321.t:0 "1936년 스탠리컵"
+canada.321.t:0 "1936년 스탠리컵(북미아이스하키리그)"
 canada.321.d:0 "두 팀이 스탠리 컵 결승전에 진출했습니다. 디트로이트 레드 윙즈와 토론토 메이플 리프스. 이 게임의 우승자는 1936년 NHL의 챔피언이 될 것이고 스탠리 컵을 받을 것입니다."
 canada.321.a:0 "누가 우승 컵을 탈까?"
 
-canada.322.t:0 "The Detroit Red Wings win the '36 Stanley Cup"
-canada.322.d:0 "The Detroit Red Wings have swept the Toronto Maple Leafs for the Stanley Cup, giving the Red Wings their first ever victory in the Finals. This would have been the fourth time the Maple Leafs would've won the Finals, but the team will just have to wait for another season."
-canada.322.a:0 "Congratulations Americans"
+canada.322.t:0 "디트로이트 레드 윙즈는 '1936년 스탠리 컵'에서 우승했다"
+canada.322.d:0 "디트로이트 레드 윙즈는 토론토 메이플 리프스를 스탠리 컵에서 휩쓸어 레드 윙즈가 결승전에서 처음으로 승리했습니다. 메이플 리프스가 네번째 결승전에서 우승할 수도 있었지만, 그 팀은 단지 다음 시즌을 기다려야 할 것입니다."
+canada.322.a:0 "축하합니다 미국인들"
 
-canada.323.t:0 "The Detroit Red Wings win the '36 Stanley Cup"
-canada.323.d:0 "The Detroit Red Wings have swept the Toronto Maple Leafs for the Stanley Cup, giving the Red Wings the Stanley Cup for the first time. The games were held during a time of great unrest, but for a day, the people weren't rioting over political differences, they were rioting over the Championship."
-canada.323.a:0 "Stanley is back in Hockeytown! Woo Hoo!"
+canada.323.t:0 "디트로이트 레드 윙즈는 '1936년 스탠리 컵'에서 우승했다"
+canada.323.d:0 "디트로이트 레드 윙즈은 스탠리 컵을 위해 토론토 메이플 리프스를 휩쓸어, 스탠리 컵에서 처음으로 우승하게 했습니다. 그 경기는 큰 불안의 시기에 열렸습니다. 그러나 하루 동안 사람들은 정치적인 차이로 폭동을 일으키는 것이 아니라, 결승전을 놓고 폭동을 일으키고 있었습니다."
+canada.323.a:0 "스탠리가 하키타운으로 돌아왔다! 우후!"
 
-canada.324.t:0 "The Toronto Maple Leafs win the '36 Stanley Cup"
-canada.324.d:0 "Toronto has beat Detroit in a four game series for the Stanley Cup, bringing the team their fourth victory in the Finals. Once again, the Kid Line of Charlie Conacher, Harvey "Busher" Jackson, and Joe Primeau has brought the Stanley Cup to Toronto!"
-canada.324.a:0 "O Canada! Our home and native land!"
+canada.324.t:0 "토론토 메이플 리프스는 '1936년 스탠리 컵'에서 우승했다"
+canada.324.d:0 "토론토가 스탠리 컵을 위해 네번의 연속 시합에서 디트로이트를 이겨서, 팀이 결승전에서 네번째 승리를 거두게 했습니다. 다시 한번, 찰리 코나커, 하비 "부셔" 잭슨, 그리고 조 프리뮤가 스탠리 컵을 토론토로 가지고 왔습니다!"
+canada.324.a:0 "오 캐나다! 우리의 집과 조국!"
 
-canada.325.t:0 "The Toronto Maple Leafs win the '36 Stanley Cup"
-canada.325.d:0 "Toronto has beat Detroit in a four game series for the Stanley Cup, bringing the Maple Leafs their fourth victory in the Finals. The Red Wings have yet to win the Stanley Cup, but are determined to play hard next season to finally win the Cup."
-canada.325.a:0 "Congratulations Canadians"
+canada.325.t:0 "토론토 메이플 리프스는 '1936년 스탠리 컵'에서 우승했다"
+canada.325.d:0 "토론토가 스탠리 컵을 위해 네번의 연속 시합에서 디트로이트를 이겨서, 팀이 결승전에서 네번째 승리를 거두게 했습니다. 레드 윙즈는 스탠리 컵에서 아직 우승한 적이 없지만, 우승하기 위해 다음 시즌에 열심히 뛸 각오입니다."
+canada.325.a:0 "축하합니다 캐나다인들"
 
-canada.330.t:0 "Intervene in the US Civil War?"
-canada.330.d:0 "The United States has descended into a civil war, syndicalists are right on our door steps while Huey Long rallies forces to oppose both. Chaos has overtaken our neighbors to the south. We are thus presented with two choices. First is to activate Defense Plan Two and move to occupy a number of strategic locations, principally the New England region. The Second is to move to siding with the Federal Government and working to join the war more directly. "
-canada.330.a:0 "Support the federal government"
-canada.330.b:0 "Activate Defense plan two"
+canada.330.t:0 "미국 내전에 개입?"
+canada.330.d:0 "미국은 내전에 돌입했고, 생디칼리스트들은 우리의 문턱에 서 있는 반면, 휴이 롱은 두가지 모두를 반대하기 위해 힘을 모으고 있습니다. 혼돈이 우리 이웃을 남쪽까지 따라잡았습니다. 따라서 우리는 두가지 선택 사항을 가지고 있습니다. 첫번째는 방위 계획 2를 활성화시키고 주로 뉴 잉글랜드 지역을 포함한 많은 전략적 위치를 차지하기 위해 움직이는 것입니다. 두번째는 연방 정부의 편을 들어주고 전쟁에 더 직접적으로 참여하기 위해 일하는 것입니다."
+canada.330.a:0 "연방 정부를 지지한다"
+canada.330.b:0 "방위 계획 2 활성화"
 
 
 
-canada.800.t:0 "The Governor General of Canada"
-canada.800.d:0 "With the King in Buckingham Palace overseeing the restoration of Royalist rule in Britain, the question has arisen regarding the King's role in Canada. During the Exile, the post of Governor-General lapsed and both George V and Edward VIII took his place directly in the structure of the Canadian government. With the attention of Edward VIII focussed on Britain, the Canadian government has quietly suggested that the post of Governor-General should be revived, though of course this in no way diminishes the loyalty of the Dominion to His Majesty. One suggestion has been to appoint the King's brother Albert as a permanent Governor-General. Alternatively, the old practice of appointing Britons to the post could be revived. Though such a decision might not be favourably received in Canada, General Brooke-Popham's name has been mentioned for the post. On the other hand, the choice could be left to the Canadian government, in recognition of their vital role in the defeat of the Union of Britain. Finally, Edward VIII could decide to retain direct personal rule of Canada, embodying in himself the eternal link between Canada and the Mother Country."
-canada.800.a:0 "Personal Rule"
-canada.800.b:0 "Appoint the king's Brother Albert"
-canada.800.c:0 "Appoint Robert Brooke-Popham"
-canada.800.e:0 "Leave it up to the Canadians"
+canada.800.t:0 "캐나다 총독부"
+canada.800.d:0 "버킹엄 궁의 왕이 영국의 왕정 통치의 복원을 감독하면서, 캐나다에서의 왕의 역할에 대한 의문이 제기되었습니다. 망명기간 동안 총독의 자리가 없어지고 조지 5세와 에드워드 8세 둘 다 캐나다 정부의 조직에 직접 자리를 잡았습니다. 영국에 초점을 둔 에드워드 8세의 관심과 함께 캐나다 정부는 조용히 총독의 권력이 되살아 나야 한다는 것을 제안했습니다. 물론 이것은 어떤 면에서도 결코 자치령의 폐하에 대한 충성도를 감소시키지 못합니다. 한가지 제안은 국왕의 동생인 앨버트를 영구적인 총독으로 임명하자는 것이었습니다. 아니면, 영국인들을 그 직책에 임명하는 오래된 관행을 부활할 수도 있습니다. 그러한 결정이 캐나다에서 환영 받지 못할 수도 있지만, 브룩-폽햄 장군의 이름이 그 자리에 거론되었습니다. 반면에, 브리튼 연방의 패배에 있어서의 캐나다 정부의 중요한 역할을 인정하기 위해, 이 선택을 캐나다 정부에 맡길 수도 있습니다. 마침내, 에드워드 8세는 캐나다에 대한 직접적인 개인 통치를 유지하기로 결정할 수 있었고, 캐나다와 모국 사이의 영원한 연결 고리를 구현할 수 있었습니다."
+canada.800.a:0 "직접 통치"
+canada.800.b:0 "국왕의 동생 앨버트 임명"
+canada.800.c:0 "로버트 브룩-폽햄 임명"
+canada.800.e:0 "캐나다 사람들에게 맡겨라"
 
-canada.801.t:0 "The King Retains Personal Rule"
-canada.801.d:0 "After the liberation of the United Kingdom, there were suggestions that the office of Governor-General might be revived, considering that the attention of the King would naturally be focussed on reconstruction in the United Kingdom. However, Edward VIII has decided to retain personal rule in Canada, suggesting that the eternal link between the two countries is embodied in his person."
-canada.801.a:0 "Hopefully the King does not ignore Canada"
+canada.801.t:0 "왕이 직접 통치를 유지하다"
+canada.801.d:0 "영국이 해방된 뒤에는 영국의 재건에 왕의 관심이 쏠리는 점을 감안해 총독부를 부활시키자는 제안이 있었습니다. 그러나 에드워드 8세는 캐나다에서 개인적인 통치를 계속하기로 결정함으로써, 두 나라 간의 영원한 관계가 그의 몸에 구현되어 있다는 것을 보여 주었습니다."
+canada.801.a:0 "바라건대 왕은 캐나다를 무시하지 않습니다"
 
-canada.802.t:0 "The King Appoints His Brother Albert"
-canada.802.d:0 "After the liberation of the United Kingdom, there were suggestions that the office of Governor-General might be revived, considering that the attention of the King would naturally be focussed on reconstruction in the United Kingdom. After due consideration, the King has appointed his brother Albert as a permanent Governor-General. This appoint has been received reasonably well - though there was some hope a Canadian might fill the post, the Prince made a good impression in Canada during the Exile, particularly among Liberal politicians."
-canada.802.a:0 "Welcome the Prince"
+canada.802.t:0 "왕이 동생 앨버트를 임명하다"
+canada.802.d:0 "영국이 해방된 뒤에는 영국의 재건에 왕의 관심이 쏠리는 점을 감안해 총독부를 부활시키자는 제안이 있었습니다. 충분히 고려한 후에, 왕은 동생인 앨버트를 영구적인 총독으로 임명했습니다. 이 임명은 캐나다 사람들이 그 자리를 차지할 것이라는 희망이 있었음에도 불구하고, 왕자는 특히 자유주의 정치인들 사이에서 캐나다에 좋은 인상을 주었습니다."
+canada.802.a:0 "왕자님 환영합니다"
 
-canada.803.t:0 "The King Appoints a British General"
-canada.803.d:0 "After the liberation of the United Kingdom, there were suggestions that the office of Governor-General might be revived, considering that the attention of the King would naturally be focused on reconstruction in the United Kingdom. After due consideration, the King has decided to revive the earlier practice of appointing Britons to the post. The first Governor-General is to be General Robert Brooke-Popham, a close friend of the King. The appointment has resulted in some disappointment in Canada, as there had been hopes a Canadian would fill the position."
-canada.803.a:0 "Robert Brooke-Popham it is"
+canada.803.t:0 "왕이 영국 장군을 임명하다"
+canada.803.d:0 "영국이 해방된 뒤에는 영국의 재건에 왕의 관심이 쏠리는 점을 감안해 총독부를 부활시키자는 제안이 있었습니다. 충분히 고려한 후에, 왕은 영국인들을 그 직책에 임명하는 이전의 관행을 부활시키기로 결정했습니다. 첫번째 총독은 국왕의 가까운 친구인 로버트 브룩-폽햄 장군이 될 것입니다. 캐나다 측이 그 자리를 차지할 것이라는 기대감으로 인해, 이번 임명으로 캐나다는 어느 정도 실망하게 되었습니다."
+canada.803.a:0 "로버트 브룩-폽햄 인가"
 
-canada.804.t:0 "The King Leaves the Choice to Us"
-canada.804.d:0 "After the liberation of the United Kingdom, there were suggestions that the office of Governor-General might be revived, considering that the attention of the King would naturally be focused on reconstruction in the United Kingdom. After due consideration, the King has informed the Canadian government that he will appoint whatever individual the Canadians recommend. This decision has been warmly received in Canada, as a reflection of the growing maturity of the country on the world stage, and the key role it played in the defeat of the Union of Britain. The two leading candidates are Frederick Banting, world-renowned scientist and the discoverer of insulin, and General Georges Vanier, war hero and leading figure in the Canadian military."
-canada.804.a:0 "The Famed Scientist, Frederick Banting"
-canada.804.b:0 "The War Hero, Georges Vanier"
+canada.804.t:0 "왕이 선택을 우리에게 맡기다"
+canada.804.d:0 "영국이 해방된 뒤에는 영국의 재건에 왕의 관심이 쏠리는 점을 감안해 총독부를 부활시키자는 제안이 있었습니다. 충분히 고려한 후에, 왕은 캐나다 정부에게 캐나다인들이 추천하는 어떤 개인을 임명할 것이라고 알렸습니다. 이 결정은 세계 무대에서 캐나다의 성장하는 성숙도를 반영하고 있고, 브리튼 연방을 패배시킨 주요 역할을 하고 있기 때문에 캐나다에서 열렬히 받아들여졌습니다. 세계적으로 유명한 과학자이자 인슐린 발견자인 프레더릭 밴팅과 전쟁 영웅이자 캐나다군의 선두 주자인 조르주 바니에르가 유력한 후보입니다."
+canada.804.a:0 "유명한 과학자, 프레더릭 밴팅"
+canada.804.b:0 "전쟁 영웅, 조르주 바니에르"
 
-canada.805.t:0 "Investing in Britain"
-canada.805.d:0 "With reconstruction going ahead in the United Kingdom a number of leaders have gathered in Parliament Hill to discuss how Canada should help invest in the mother country. We can invest a small, medium or large amount of Canadian talent and economy into helping to rebuild the United Kingdom. The larger the investment the better things will be for the mother country, though it also means diverging industry away from Canada which might ruffle feathers."
-canada.805.a:0 "A small investment should do."
-canada.805.b:0 "A moderate investment should do."
-canada.805.c:0 "A large investment should do."
+canada.805.t:0 "영국 투자"
+canada.805.d:0 "영국에서 재건이 진행되면서, 많은 지도자들이 캐나다가 모국에 투자하는 것을 어떻게 도와야 하는지에 대해 논의하기 위해 캐나다 국회에 모였습니다. 우리는 영국 재건을 돕기 위해 소규모, 중규모 또는 대규모로 캐나다 인재와 경제를 투자할 수 있습니다. 투자 규모가 클수록 모국에 더 좋은 것이 될 것이지만, 이것은 또한 자국의 산업을 캐나다로부터 다른 곳으로 분산시키는 것을 의미하며 이는 사람들을 화나게 할 수 있습니다."
+canada.805.a:0 "소규모로 투자하라."
+canada.805.b:0 "중규모로 투자하라"
+canada.805.c:0 "대규모로 투자하라"
 
-canada.806.t:0 "Canadian Investment"
-canada.806.d:0 "News has reached us that Canada is investing a small portion of their economy into helping to rebuild the country. While we would have liked more, every bit helps to rebuild the country and make Britain once again a green and pleasant land without syndicalism in the country."
-canada.806.a:0 "Three cheers for Canada!"
+canada.806.t:0 "캐나다 투자"
+canada.806.d:0 "캐나다가 국가 재건을 돕기 위해 그들 경제의 작은 부분을 투자하고 있다는 소식이 우리에게 전해졌습니다. 우리가 좀 더 원했을지라도, 모든 것은 영국을 재건하고 영국에서 생디칼리즘이 없는 환경 친화적이고 쾌적한 나라로 만드는 데 도움을 주었습니다."
+canada.806.a:0 "캐나다를 위한 만세!"
 
-canada.807.t:0 "Investing in Britain"
-canada.807.d:0 "News has reached us that Canada is investing a portion of their economy into helping to rebuild the country. It is a respectable and we couldn't have asked for more in our hour of need. This will be of great help in getting the country back on her feet after Syndicalist Rule."
-canada.807.a:0 "Three cheers for Canada!"
+canada.807.t:0 "영국 투자"
+canada.807.d:0 "캐나다가 자국 경제의 일부를 재건을 돕는 데 투자하고 있다는 소식이 우리에게 전해졌습니다. 그것은 존경할 만한 일이고 우리가 어려운 시기에 더 많은 것을 요구할 수는 없었을 것입니다. 이것은 생디칼리스트 통치 이후에 이 나라가 다시 일어설 수 있게 하는데 큰 도움이 될 것입니다."
+canada.807.a:0 "캐나다를 위한 만세!"
 
-canada.808.t:0 "Investing in Britain"
-canada.808.d:0 "News has reached us that Canada is investing a Large portion of their economy into helping to rebuild the country. This is more then we could have asked for. This will help greatly in bouncing back from the destruction the Syndicalist rule of the country."
-canada.808.a:0 "Three cheers for Canada!"
+canada.808.t:0 "영국 투자"
+canada.808.d:0 "캐나다가 국가 재건을 돕기 위해 그들 경제의 많은 부분을 투자하고 있다는 소식이 우리에게 전해졌습니다. 이것은 우리가 요청할 수 있었던 것 이상입니다. 이것은 나라의 생디칼리스트의 파괴로부터 회복하는데 크게 도움이 될 것입니다."
+canada.808.a:0 "캐나다를 위한 만세!"
 
-canada.809.t:0 "Fate of the House of Lords"
-canada.809.d:0 "When the British Revolution happened the Canadian Senate was replaced by the House of Lords. Now however with the liberation of the British Isles, many nobles and aristocrats are moving back to the British Isles. This however has left the upper house of Canada rather empty. Two proposals have emerged as to what to do about the upper house. The first is that we should just abolish the House of Lords and become a unicameral government. The second is that we should elevate a number of new men and women to the nobility."
-canada.809.a:0 "Abolish the House of Lords"
-canada.809.b:0 "Create a new, Canadian upper class"
+canada.809.t:0 "상원의 운명"
+canada.809.d:0 "영국 혁명이 일어났을 때, 캐나다 상원은 영국의 상원으로 대체되었습니다. 하지만 이제 영국 제도의 해방과 함께, 많은 귀족들과 의원들이 영국 제도로 돌아가고 있습니다. 그러나 이것은 캐나다의 상원을 다소 텅 빈 채로 남겨두었습니다. 상원에 대해 무엇을 해야 할 지에 대한 두 가지 제안이 나왔습니다. 첫번째는 우리가 상원을 폐지하고 단원제 정부가 되어야 한다는 것입니다. 두번째는 많은 새로운 남녀들을 귀족으로 격상시켜야 한다는 것입니다."
+canada.809.a:0 "상원 폐지"
+canada.809.b:0 "새로운 캐나다 상류층을 만듭니다"
 
 canada.810.t:0 "캐나다 음식"
 canada.810.d:0 "우리가 생디칼리즘의 지배에서 영국을 재건하면서 주목하게 된 한가지는 식량의 필요성입니다. 영국의 농장과 어업이 충분히 생산을 하는 반면에, 생디칼리즘에서 벗어나는 것이 문제를 일으키고 있습니다. 하지만, 감사하게도 캐나다인들이 우리의 인구를 먹여 살릴 수 있는 음식을 제공하기 위해 개입했습니다."
@@ -1393,6 +1393,6 @@ canada.812.t:0 "새로운 캐나다 장교들"
 canada.812.d:0 "많은 캐나다의 젊은 장교들이 영국의 재정복 동안 그들의 가치를 증명했는데, 이는 그들의 용맹함과 그들의 전술적이고 명령적인 능력을 보여 줍니다. 이제 많은 영국 장교들이 본국으로 귀환하기로 결정함에 따라, 육군 본부는 그들 중 많은 병사들을 상급 사령부로 진급시키기로 결정했습니다. 그들 중 몇몇은 그들의 경험이 새로운 전술가, 전략가, 지도자들을 형성하는 것을 돕기 위해 사관 학교에서 중요한 역할을 받았습니다."
 canada.812.a:0 "완벽해"
 
-canada.360.t:0 "Princess Elizabeth's radio Speech"
-canada.360.d:0 "Today Princess Elizabeth, daughter of King Edward's brother Prince Albert, gave a speech on the radio to children across the empire. She expresses her sympathy and compassion to the children throughout the empire who will not see their parents again for sometime as they go out to reclaim the home islands from the Syndicalists."
-canada.360.a:0 "Thank you Princess Elizabeth"
+canada.360.t:0 "엘리자베스 공주의 라디오 연설"
+canada.360.d:0 "오늘 에드워드 왕의 동생인 앨버트 왕자의 딸인 엘리자베스 공주가 제국 전역의 아이들에게 라디오에서 연설을 했습니다. 그녀는 제국을 통틀어 생디칼리스트로부터 고향 섬을 되찾아 오는 부모님들을 당분간 다시 볼 수 없을 아이들에게 동정과 연민을 표현했습니다."
+canada.360.a:0 "고마워요 엘리자베스 공주"
