--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -785,7 +785,7 @@ ott.103.a:0 "현지 언어로 작성된 탄원서 허용"
 ott.103.b:0 "그들이 불평하고 싶다면, 그들은 터키어를 배워야 한다"
 
 ott.104.t:0 "오스만 헌법 - 노동 조합의 권리"
-ott.104.d:0 "자유 주의자들과 보수 주의자들은 과도한 권력을 얻는 생디칼리스트 파벌들을 경계하고 있었기 때문에 노동 조합과 신디케이트의 권리 문제는 두려운 것이다. 신중한 심의를 거쳐 세 개의 조항이 구성되어 근로자에게 충분한 권리를 부여하고 생디칼리스트주의의 영향력을 제한하려고 한다."
+ott.104.d:0 "자유 주의자들과 보수 주의자들은 과도한 권력을 얻는 생디칼리스트 파벌들을 경계하고 있었기 때문에 노동 조합과 생디칼리스트의 권리 문제는 두려운 것이다. 신중한 심의를 거쳐 세 개의 조항이 구성되어 근로자에게 충분한 권리를 부여하고 생디칼리스트주의의 영향력을 제한하려고 한다."
 ott.104.a:0 "모든 노동 조합, 파업 및 사무실 폐쇄 허용"
 ott.104.b:0 "그러한 무신경한 생디칼리즘은 오스만 제국에 설 자리가 없다!"
 
@@ -1096,23 +1096,23 @@ ott.171.d:0 "나의 술탄, 우리의 대사들은 추방되었습니다! 투르
 ott.171.a:0 "이건 내가 기대했던 것이 아니었어..."
 
 ott.172.t:0 "헌병대가 무기 선적을 포착했다"
-ott.172.d:0 "많은 밀수업자들이 어제 Diyarbakır 교외에 있는 오스만 헌병대에 의해 저지당했는데, 그는 수천개의 소총과 대량의 폭발물을 도시로 운송하는 것으로 밝혀졌다. 그 무기들은 프랑스제 이었고, 밀수업자들에 대한 심문으로 그들이 조지아 주의 생디칼리스트로부터 상자를 얻었다는 것을 드러냈다. 현재 대규모 조사가 진행 중이다."
+ott.172.d:0 "많은 밀수업자들이 어제 디야르바키르 교외에 있는 오스만 헌병대에 의해 저지당했는데, 그는 수천개의 소총과 대량의 폭발물을 도시로 운송하는 것으로 밝혀졌다. 그 무기들은 프랑스제 이었고, 밀수업자들에 대한 심문으로 그들이 조지아 주의 생디칼리스트로부터 상자를 얻었다는 것을 드러냈다. 현재 대규모 조사가 진행 중이다."
 ott.172.a:0 "이 소총들로 무엇을 할 계획이었을까?"
 
-ott.173.t:0 "Mosul에서 잡힌 생디칼리스트 요원"
-ott.173.d:0 "현지인들을 돕는 우리의 헌병대는 모술에있는 생디칼리스트 요원들의 네트워크를 밝혀 냈습니다. 그들은 Mosul에서 무장하고 우리의 통치에 맞서 싸울 민병대를 훈련했다고 합니다. 일련의 급습에서 3 명의 생디칼리스트 요원이 체포되었고 중요한 문서가 발견되었습니다. 조지아와 프랑스의 생디칼리스트들은 우리 쿠르드 지방에서 무장 봉기를 조직하려는 시도를 하고 있는 것으로 보인다."
+ott.173.t:0 "모술에서 잡힌 생디칼리스트 요원"
+ott.173.d:0 "현지인들을 돕는 우리의 헌병대는 모술에있는 생디칼리스트 요원들의 네트워크를 밝혀 냈습니다. 그들은 모술에서 무장하고 우리의 통치에 맞서 싸울 민병대를 훈련했다고 합니다. 일련의 급습에서 3 명의 생디칼리스트 요원이 체포되었고 중요한 문서가 발견되었습니다. 조지아와 프랑스의 생디칼리스트들은 우리 쿠르드 지방에서 무장 봉기를 조직하려는 시도를 하고 있는 것으로 보인다."
 ott.173.a:0 "엎드려!"
 
-ott.174.t:0 "Ağrı에서 잡힌 오스만 반역자"
+ott.174.t:0 "아리에서 잡힌 오스만 반역자"
 ott.174.d:0 "동부 지역에서 생디칼리스트가 간섭하는 것에 대해서 진행 중인 작전 과정에서, 우리의 중대 규모의 헌병대가 아르메니아 국경 근처의 쿠르드족 부족에 의해 습격 당했다. 군대의 증원군이 신속히 현장에 도착했으며, 반란군은 그 자리에서 패배했습니다. 많은 사람들이 가까스로 국경을 넘어 페르시아로 건너갔지만, 우리 부대는 즉각 항복한 작은 도적단 무리를 포위했다. 그들 중에는 İhsan Nuri 경을 포함한 몇 명의 오스만 장교들이 있었다. 놀랍게도 인구 기록에 대한 간략한 조사에 따르면 오스만 교육을 받은 이 장교들은 쿠르드족의 배경이 아니었지만 대신에 아르메니아와 조지아에 조상이 있었다. 그들이 왜 쿠르드족의 분리 주의를 옹호하는지 이유가 분명하지 않지만, 더 광범위한 음모가 있다는 것은 명백하다."
 ott.174.a:0 "왜 그러한 집단들이 우리 군대에 잠입했을까?"
 
-ott.175.t:0 "Druze 반란이 시리아에 퍼졌다"
-ott.175.d:0 "Druze 부족민들의 대규모 반란이 최근 우리 사막 특수부대들에 의해 진압되었다. 수 백명의 반군들이 살해되었고, 패배한 부족들은 그들의 마을로 돌아갔고 우리의 무역로에 대한 그들의 습격을 중단했다. 이 반란은 하심가 요원에 의해 유발되고 있다는 증거가 있습니다."
+ott.175.t:0 "드루즈 반란이 시리아에 퍼졌다"
+ott.175.d:0 "드루즈 부족민들의 대규모 반란이 최근 우리 사막 특수부대들에 의해 진압되었다. 수 백명의 반군들이 살해되었고, 패배한 부족들은 그들의 마을로 돌아갔고 우리의 무역로에 대한 그들의 습격을 중단했다. 이 반란은 하심가 요원에 의해 유발되고 있다는 증거가 있습니다."
 ott.175.a:0 "무의미한 낭비로군..."
 
-ott.176.t:0 "Basra에서 이집트의 무기 선적이 잡혔다"
-ott.176.d:0 "익명의 제보 덕분에, 익명의 제보 덕분에 Basra 항구에서 소총으로 가득 찬 두 개의 선적 컨테이너가 발견되었습니다. 이집트 항구에서 유래된 이 컨테이너들은 스페인 화물선에 의해 반입되었습니다. 이 무기들은 이라크 남부에 있는 반란군들이 우리 병사들에 대항하기 위해 사용된 것으로 보인다."
+ott.176.t:0 "바스라에서 이집트의 무기 선적이 잡혔다"
+ott.176.d:0 "익명의 제보 덕분에, 익명의 제보 덕분에 바스라 항구에서 소총으로 가득 찬 두 개의 선적 컨테이너가 발견되었습니다. 이집트 항구에서 유래된 이 컨테이너들은 스페인 화물선에 의해 반입되었습니다. 이 무기들은 이라크 남부에 있는 반란군들이 우리 병사들에 대항하기 위해 사용된 것으로 보인다."
 ott.176.a:0 "우린 이 사건의 진상을 규명할 거야..."
 
 ott.177.t:0 "다마스쿠스에서 잡힌 하심가 스파이"
