--- a/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ireland_l_english.yml
@@ -49,7 +49,7 @@ ire.ieaa.tt:0 "\nPass the IEAA and begin considering the economic direction of t
 ire.debtscheme.tt:0 "\nWill reduce the national debt by a §Osignificant§! amount every year in addition to the usual."
 
 # IEAA event - Collins in charge
-ire.9.t:0 "의회가 상업에 대해 고려하다. "
+ire.9.t:0 "의회가 경제에 대해 고려하다. "
 ire.9.d:0 "아일랜드 경제 진보 정책(IEAA)의 통과 이후, 아일랜드 정부의 신속하고 완벽히 경제를 재정비하겠다는 약조가 이뤄졌습니다. 법안에 규정된 대로, 정부는 지금부터 매 년 경제 발전에 중점을 두는 결정을 해야 합니다. 피너 게일의 지도자이자 아일랜드의 대통령인 마이클 콜린스 뿐만 아니라, 국민중앙당의 프랭크 맥더멋도 경제를 가능한 한 빠르게 발전시키는걸 집중해야 한다고 합니다. 생디칼리스트 연합을 이끄는 짐 라킨은 노조에게 힘을 주는 것이 우리 산업의 생산성을 늘리는 길이라고 주장합니다. 마지막으로 신페인은 주요 산업을 연구하고 개발하자고 제안했습니다."
 ire.9.a:0 "콜린스와 NCP의 생각이 옳다."
 ire.9.b:0 "민주주의자들과 자유주의자들을 따라라."
