--- a/Kaiserreich Korean Translation/localisation/KR_Turkey_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Turkey_l_english.yml
@@ -2,7 +2,7 @@ l_english:
 
 ### Opinion Modifiers ###
 tur_syndie:0 "생디칼리즘 외교"
-tur_irredentism:0 "터키의 교전"
+tur_irredentism:0 "터키의 투쟁"
 tur_peaceful:0 "세계 평화"
 
 ### Parties ###
